chore: Format output for 1r

--- a/notebooks/1r-audio-transcription.ipynb
+++ b/notebooks/1r-audio-transcription.ipynb
@@ -289,16 +289,16 @@
     "\n",
     "if transcription and transcription[\"segments\"]:\n",
     "    segments_df = pd.DataFrame(transcription[\"segments\"])\n",
-    "    justsdk.print_info(\"Segments DataFrame:\", newline_before=True)\n",
     "    for index, seg in segments_df.iterrows():\n",
-    "        print(\n",
-    "            f\"\\n  [{seg['start_formatted']} -> {seg['end_formatted']}] ({seg['duration']:.2f}s)\"\n",
+    "        justsdk.print_info(\n",
+    "            f\"  [{seg['start_formatted']} -> {seg['end_formatted']}] ({seg['duration']:.2f}s)\",\n",
+    "            newline_before=True\n",
     "        )\n",
-    "        print(f\"{'==' * 10} Text {'=' * 10}\")\n",
+    "        print(f\"{'=' * 10} Text {'=' * 10}\")\n",
     "        print(seg[\"text\"])\n",
     "        print(f\"{'=' * 26}\")\n",
-    "        print(f\"\\n  Confidence: {seg['avg_logprob']:.4f}\")\n",
-    "        print(f\"\\n  Non speech probability: {seg['no_speech_prob']:.4f}\")"
+    "        print(f\"  Confidence: {seg['avg_logprob']:.4f}\")\n",
+    "        print(f\"  Non speech probability: {seg['no_speech_prob']:.4f}\")"
    ]
   },
   {
