chore: Migrate e2e test to notebooks

--- a/notebooks/1r-audio-transcription.ipynb
+++ b/notebooks/1r-audio-transcription.ipynb
@@ -39,7 +39,6 @@
     "\n",
     "ROOT = Path.cwd().parent\n",
     "DATA_DIR = ROOT / \"data\"\n",
-    "RAW_DIR = DATA_DIR / \"raw\"\n",
     "SAMPLE_DIR = DATA_DIR / \"sample\" / \"audio\"\n",
     "MODEL_DIR = ROOT / \"models\""
    ]
@@ -292,7 +291,7 @@
     "    for index, seg in segments_df.iterrows():\n",
     "        justsdk.print_info(\n",
     "            f\"  [{seg['start_formatted']} -> {seg['end_formatted']}] ({seg['duration']:.2f}s)\",\n",
-    "            newline_before=True\n",
+    "            newline_before=True,\n",
     "        )\n",
     "        print(f\"{'=' * 10} Text {'=' * 10}\")\n",
     "        print(seg[\"text\"])\n",
