chore: Reorder the imports block

--- a/notebooks/1r-audio-transcription.ipynb
+++ b/notebooks/1r-audio-transcription.ipynb
@@ -15,7 +15,7 @@
    "id": "70d7beec-d477-4e59-bfe8-5ce5691644b8",
    "metadata": {},
    "source": [
-    "### 1. Importing"
+    "### 1. Imports + Configs"
    ]
   },
   {
@@ -40,24 +40,8 @@
     "ROOT = Path.cwd().parent\n",
     "DATA_DIR = ROOT / \"data\"\n",
     "SAMPLE_DIR = DATA_DIR / \"sample\" / \"audio\"\n",
-    "MODEL_DIR = ROOT / \"models\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4e827c7e",
-   "metadata": {},
-   "source": [
-    "### 2. Setting configs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "71c2a032",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "MODEL_DIR = ROOT / \"models\"\n",
+    "\n",
     "WHISPER_MODEL = \"base\"\n",
     "\n",
     "WHISPER_CONFIG = {\n",
@@ -99,7 +83,7 @@
    "id": "a19a951a",
    "metadata": {},
    "source": [
-    "### 3. Linking sample audio files"
+    "### 2. Linking sample audio files"
    ]
   },
   {
@@ -127,7 +111,7 @@
    "id": "2a7378ad",
    "metadata": {},
    "source": [
-    "### 4. Initializing `faster-whisper`"
+    "### 3. Initializing `faster-whisper`"
    ]
   },
   {
@@ -155,12 +139,12 @@
    "id": "71cf81f3",
    "metadata": {},
    "source": [
-    "### 5. Functions to transcribe audio"
+    "### 4. Functions to transcribe audio"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "38ce9ede",
    "metadata": {},
    "outputs": [],
@@ -256,7 +240,7 @@
    "id": "9bf4e0b4",
    "metadata": {},
    "source": [
-    "### 6. Transcribing sample audio"
+    "### 5. Transcribing sample audio"
    ]
   },
   {
@@ -305,7 +289,7 @@
    "id": "ea39bd88",
    "metadata": {},
    "source": [
-    "### 7. Visualizing the metrics"
+    "### 6. Visualizing the metrics"
    ]
   },
   {
