--- a/notebooks/2r-nlp-e2e.ipynb
+++ b/notebooks/2r-nlp-e2e.ipynb
@@ -26,10 +26,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea8bcad2",
+   "id": "96ba9831",
    "metadata": {},
    "source": [
-    "### 1. Importing libraries"
+    "### 1. Imports + Configs"
    ]
   },
   {
