feat: Add pre-commit and update Makefile

--- a/notebooks/1r-audio-transcription.ipynb
+++ b/notebooks/1r-audio-transcription.ipynb
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "38ce9ede",
    "metadata": {},
    "outputs": [],
@@ -368,8 +368,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
