--- a/notebooks/2r-nlp-e2e.ipynb
+++ b/notebooks/2r-nlp-e2e.ipynb
@@ -53,7 +53,14 @@
     "ROOT = Path.cwd().parent\n",
     "DATA_DIR = ROOT / \"data\"\n",
     "SAMPLE_DIR = DATA_DIR / \"sample\" / \"pdf\"\n",
-    "SAMPLE_PATH = SAMPLE_DIR / \"01-agile-methodology.pdf\""
+    "\n",
+    "sample_pdfs = []\n",
+    "sample_pdfs.extend(SAMPLE_DIR.glob(\"*.pdf\"))\n",
+    "\n",
+    "justsdk.print_info(\"sample_pdfs:\")\n",
+    "for pdf in sample_pdfs:\n",
+    "    size_mb = pdf.stat().st_size / (1024 * 1024)\n",
+    "    print(f\"  {pdf.name}: {size_mb:.2f} MB\")"
    ]
   },
   {
@@ -95,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "doc = pymupdf.open(SAMPLE_PATH)\n",
+    "doc = pymupdf.open(sample_pdfs[0])\n",
     "text = \"\".join([doc.load_page(p).get_text() for p in range(len(doc))])\n",
     "doc.close()\n",
     "\n",
@@ -226,8 +233,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
