chore: Add mp4 sample

--- a/notebooks/1r-audio-transcription.ipynb
+++ b/notebooks/1r-audio-transcription.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "ROOT = Path.cwd().parent\n",
     "DATA_DIR = ROOT / \"data\"\n",
-    "SAMPLE_DIR = DATA_DIR / \"sample\" / \"audio\"\n",
+    "SAMPLE_DIR = DATA_DIR / \"sample\"\n",
     "MODEL_DIR = ROOT / \"models\"\n",
     "\n",
     "WHISPER_MODEL = \"base\"\n",
@@ -93,17 +93,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_audio = []\n",
-    "audio_ext = [\".wav\", \".mp3\", \".mp4\"]\n",
+    "sample_input = []\n",
     "\n",
+    "audio_ext = [\".wav\", \".mp3\"]\n",
+    "sample_audio_path = SAMPLE_DIR / \"audio\"\n",
     "for ext in audio_ext:\n",
-    "    sample_audio.extend(SAMPLE_DIR.glob(f\"*{ext}\"))\n",
+    "    sample_input.extend(sample_audio_path.glob(f\"*{ext}\"))\n",
     "\n",
-    "# Check the sample audio size in MB\n",
-    "justsdk.print_info(\"sample_audio:\")\n",
-    "for audio in sample_audio:\n",
-    "    size_mb = audio.stat().st_size / (1024 * 1024)\n",
-    "    print(f\"  {audio.name}: {size_mb:.2f} MB\")"
+    "video_ext = [\".mp4\", \".mkv\"]\n",
+    "sample_video_path = SAMPLE_DIR / \"video\"\n",
+    "for ext in video_ext:\n",
+    "    sample_input.extend(sample_video_path.glob(f\"*{ext}\"))\n",
+    "\n",
+    "justsdk.print_info(\"sample_input:\")\n",
+    "for video in sample_input:\n",
+    "    size_mb = video.stat().st_size / (1024 * 1024)\n",
+    "    print(f\"  {video.name}: {size_mb:.2f} MB\")"
    ]
   },
   {
@@ -251,8 +256,8 @@
    "outputs": [],
    "source": [
     "transcription = None\n",
-    "if sample_audio:\n",
-    "    selected_audio = sample_audio[0]\n",
+    "if sample_input:\n",
+    "    selected_audio = sample_input[1]\n",
     "    justsdk.print_info(f\"Transcribing audio: {selected_audio.name}\")\n",
     "    display(Audio(str(selected_audio)))\n",
     "    transcription = transcribe_audio(selected_audio, model, AUDIO_CONFIG)\n",
