fix: Retain notebooks metadata

--- a/notebooks/1r-audio-transcription.ipynb
+++ b/notebooks/1r-audio-transcription.ipynb
@@ -257,7 +257,7 @@
    "source": [
     "transcription = None\n",
     "if sample_input:\n",
-    "    selected_audio = sample_input[1]\n",
+    "    selected_audio = sample_input[0]\n",
     "    justsdk.print_info(f\"Transcribing audio: {selected_audio.name}\")\n",
     "    display(Audio(str(selected_audio)))\n",
     "    transcription = transcribe_audio(selected_audio, model, AUDIO_CONFIG)\n",
@@ -373,7 +373,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
