--- a/notebooks/2r-nlp-e2e.ipynb
+++ b/notebooks/2r-nlp-e2e.ipynb
@@ -233,7 +233,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
