chore: Clean up notebooks

--- a/notebooks/1r-transcribe-diarization.ipynb
+++ b/notebooks/1r-transcribe-diarization.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Audio transcription + Speaker diarization"
+    "## Audio transcription + Speaker diarization"
    ]
   },
   {
