feat!: Auto update on notebook headings

--- a/notebooks/1r-transcribe-diarization.ipynb
+++ b/notebooks/1r-transcribe-diarization.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Importing libraries"
+    "### 1. Importing libraries"
    ]
   },
   {
@@ -43,7 +43,7 @@
     "from IPython.display import Audio, display\n",
     "from pyannote.audio import Pipeline\n",
     "from typing import Optional\n",
-    "from _constants import HF_TOKEN\n",
+    "from _constants import HF_TOKEN, SAMPLE_DIR, MODEL_DIR\n",
     "from pyannote.audio.pipelines.utils.hook import ProgressHook"
    ]
   },
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Configurations"
+    "### 2. Configurations"
    ]
   },
   {
@@ -61,11 +61,6 @@
    "outputs": [],
    "source": [
     "warnings.filterwarnings(\"ignore\")\n",
-    "\n",
-    "ROOT = Path.cwd().parent\n",
-    "DATA_DIR = ROOT / \"data\"\n",
-    "SAMPLE_DIR = DATA_DIR / \"sample\"\n",
-    "MODEL_DIR = ROOT / \"models\"\n",
     "\n",
     "TARGET_SAMPLE = \"eason-shai.mp3\"\n",
     "\n",
@@ -118,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Helper: General"
+    "### 3. Helper: General"
    ]
   },
   {
@@ -142,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Get sample files"
+    "### 4. Get sample files"
    ]
   },
   {
@@ -183,7 +178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Init `faster-whisper`"
+    "### 5. Init `faster-whisper`"
    ]
   },
   {
@@ -209,7 +204,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Helper: Transcription"
+    "### 6. Helper: Transcription"
    ]
   },
   {
@@ -294,7 +289,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Transcribing audio"
+    "### 7. Transcribing audio"
    ]
   },
   {
@@ -320,7 +315,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Check full transcription"
+    "### 8. Check full transcription"
    ]
   },
   {
@@ -347,7 +342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Check segments from transcription"
+    "### 9. Check segments from transcription"
    ]
   },
   {
@@ -375,7 +370,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Metrics: Transcription segments"
+    "### 10. Metrics: Transcription segments"
    ]
   },
   {
@@ -391,7 +386,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Helper: Speaker diarization"
+    "### 11. Helper: Speaker diarization"
    ]
   },
   {
@@ -534,7 +529,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Speaker diarization"
+    "### 12. Speaker diarization"
    ]
   },
   {
@@ -570,7 +565,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Analyzing diarization results"
+    "### 13. Analyzing diarization results"
    ]
   },
   {
@@ -594,7 +589,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Metrics: Speaker diarization"
+    "### 14. Metrics: Speaker diarization"
    ]
   },
   {
