--- a/notebooks/2r-extract-text.ipynb
+++ b/notebooks/2r-extract-text.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Importing libraries"
+    "### 1. Importing libraries"
    ]
   },
   {
@@ -33,14 +33,14 @@
     "import justsdk\n",
     "import pymupdf\n",
     "\n",
-    "from pathlib import Path"
+    "from _constants import SAMPLE_DIR"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Configurations"
+    "### 2. Configurations"
    ]
   },
   {
@@ -51,9 +51,7 @@
    "source": [
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "ROOT = Path.cwd().parent\n",
-    "DATA_DIR = ROOT / \"data\"\n",
-    "SAMPLE_DIR = DATA_DIR / \"sample\" / \"text\"\n",
+    "TARGET_DIR = SAMPLE_DIR / \"text\"\n",
     "\n",
     "TARGET_SAMPLE = \"agile-methodology.docx\""
    ]
@@ -62,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Get sample files"
+    "### 3. Get sample files"
    ]
   },
   {
@@ -74,7 +72,7 @@
     "def get_sample_files() -> dict:\n",
     "    sample_ext = [\".pdf\", \".docx\"]\n",
     "\n",
-    "    samples = [sample for ext in sample_ext for sample in SAMPLE_DIR.glob(f\"*{ext}\")]\n",
+    "    samples = [sample for ext in sample_ext for sample in TARGET_DIR.glob(f\"*{ext}\")]\n",
     "\n",
     "    samples_dict = {}\n",
     "    for sample in samples:\n",
@@ -97,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Extract text"
+    "### 4. Extract text"
    ]
   },
   {
