chore: Clean sample data

--- a/notebooks/1r-transcribe-diarization.ipynb
+++ b/notebooks/1r-transcribe-diarization.ipynb
@@ -62,7 +62,7 @@
    "source": [
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "TARGET_SAMPLE = \"eason-shai.mp3\"\n",
+    "TARGET_SAMPLE = \"project-proposal.mp3\"\n",
     "\n",
     "WHISPER_MODEL = \"base\"\n",
     "\n",
