--- a/notebooks/2r-extract-text.ipynb
+++ b/notebooks/2r-extract-text.ipynb
@@ -53,7 +53,7 @@
     "\n",
     "TARGET_DIR = SAMPLE_DIR / \"text\"\n",
     "\n",
-    "TARGET_SAMPLE = \"agile-methodology.docx\""
+    "TARGET_SAMPLE = \"agile-method.pdf\""
    ]
   },
   {
