--- a/notebooks/1r-transcribe-diarization.ipynb
+++ b/notebooks/1r-transcribe-diarization.ipynb
@@ -11,11 +11,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook demonstrates the pipeline to:\n",
-    "\n",
     "1. Transcribe audio using `faster-whisper`.\n",
     "\n",
-    "2. Speaker diarization using `pyannote-audio`."
+    "2. Speaker diarization using `pyannote-audio`.\n",
+    "\n",
+    "3. Combine the results from both steps to create a structured output."
    ]
   },
   {
