chore: Extract utils for notebooks, Prompt when no headings to update

--- a/notebooks/1r-transcribe-diarization.ipynb
+++ b/notebooks/1r-transcribe-diarization.ipynb
@@ -38,13 +38,13 @@
     "import torch\n",
     "\n",
     "from pathlib import Path\n",
-    "from datetime import timedelta\n",
     "from faster_whisper import WhisperModel\n",
     "from IPython.display import Audio, display\n",
     "from pyannote.audio import Pipeline\n",
     "from typing import Optional\n",
     "from _constants import HF_TOKEN, SAMPLE_DIR, MODEL_DIR\n",
-    "from pyannote.audio.pipelines.utils.hook import ProgressHook"
+    "from pyannote.audio.pipelines.utils.hook import ProgressHook\n",
+    "from utils import format_timestamp"
    ]
   },
   {
@@ -113,31 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Helper: General"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def format_timestamp(seconds: float) -> str:\n",
-    "    \"\"\"Convert seconds to `HH:MM:SS.mm` format.\"\"\"\n",
-    "    if seconds < 0:\n",
-    "        return \"00:00:00.00\"\n",
-    "    td = timedelta(seconds=seconds)\n",
-    "    hours = int(td.total_seconds() // 3600)\n",
-    "    minutes = int((td.total_seconds() % 3600) // 60)\n",
-    "    seconds = td.total_seconds() % 60\n",
-    "    return f\"{hours:02d}:{minutes:02d}:{seconds:05.2f}\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 4. Get sample files"
+    "### 3. Get sample files"
    ]
   },
   {
@@ -178,7 +154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5. Init `faster-whisper`"
+    "### 4. Init `faster-whisper`"
    ]
   },
   {
@@ -204,7 +180,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6. Helper: Transcription"
+    "### 5. Helper: Transcription"
    ]
   },
   {
@@ -289,7 +265,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 7. Transcribing audio"
+    "### 6. Transcribing audio"
    ]
   },
   {
@@ -315,7 +291,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 8. Check full transcription"
+    "### 7. Check full transcription"
    ]
   },
   {
@@ -342,7 +318,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 9. Check segments from transcription"
+    "### 8. Check segments from transcription"
    ]
   },
   {
@@ -370,7 +346,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 10. Metrics: Transcription segments"
+    "### 9. Metrics: Transcription segments"
    ]
   },
   {
@@ -386,7 +362,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 11. Helper: Speaker diarization"
+    "### 10. Helper: Speaker diarization"
    ]
   },
   {
@@ -529,7 +505,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 12. Speaker diarization"
+    "### 11. Speaker diarization"
    ]
   },
   {
@@ -565,7 +541,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 13. Analyzing diarization results"
+    "### 12. Analyzing diarization results"
    ]
   },
   {
@@ -589,7 +565,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 14. Metrics: Speaker diarization"
+    "### 13. Metrics: Speaker diarization"
    ]
   },
   {
