fix: Move utils to nb-scripts

--- a/notebooks/1r-transcribe-diarization.ipynb
+++ b/notebooks/1r-transcribe-diarization.ipynb
@@ -44,7 +44,7 @@
     "from typing import Optional\n",
     "from _constants import HF_TOKEN, SAMPLE_DIR, MODEL_DIR\n",
     "from pyannote.audio.pipelines.utils.hook import ProgressHook\n",
-    "from utils import format_timestamp"
+    "from nb_scripts import Utils"
    ]
   },
   {
@@ -232,8 +232,8 @@
     "        \"avg_logprob\": segment.avg_logprob,\n",
     "        \"no_speech_prob\": segment.no_speech_prob,\n",
     "        \"compression_ratio\": segment.compression_ratio,\n",
-    "        \"start_formatted\": format_timestamp(segment.start),\n",
-    "        \"end_formatted\": format_timestamp(segment.end),\n",
+    "        \"start_formatted\": Utils.format_timestamp(segment.start),\n",
+    "        \"end_formatted\": Utils.format_timestamp(segment.end),\n",
     "        \"duration\": segment.end - segment.start,\n",
     "    }\n",
     "\n",
@@ -245,8 +245,8 @@
     "            \"start\": word.start,\n",
     "            \"end\": word.end,\n",
     "            \"probability\": word.probability,\n",
-    "            \"start_formatted\": format_timestamp(word.start),\n",
-    "            \"end_formatted\": format_timestamp(word.end),\n",
+    "            \"start_formatted\": Utils.format_timestamp(word.start),\n",
+    "            \"end_formatted\": Utils.format_timestamp(word.end),\n",
     "        }\n",
     "        for word in words\n",
     "    ]\n",
@@ -257,7 +257,7 @@
     "        \"language\": info.language,\n",
     "        \"language_probability\": info.language_probability,\n",
     "        \"duration\": info.duration,\n",
-    "        \"duration_formatted\": format_timestamp(info.duration),\n",
+    "        \"duration_formatted\": Utils.format_timestamp(info.duration),\n",
     "    }"
    ]
   },
@@ -415,8 +415,8 @@
     "                    \"speaker\": speaker,\n",
     "                    \"start\": turn.start,\n",
     "                    \"end\": turn.end,\n",
-    "                    \"start_formatted\": format_timestamp(turn.start),\n",
-    "                    \"end_formatted\": format_timestamp(turn.end),\n",
+    "                    \"start_formatted\": Utils.format_timestamp(turn.start),\n",
+    "                    \"end_formatted\": Utils.format_timestamp(turn.end),\n",
     "                    \"duration\": turn.end - turn.start,\n",
     "                }\n",
     "            )\n",
