wip: Handle data, Refactor folders name

--- a/notebooks/1r-transcribe-diarization.ipynb
+++ b/notebooks/1r-transcribe-diarization.ipynb
@@ -42,9 +42,9 @@
     "from IPython.display import Audio, display\n",
     "from pyannote.audio import Pipeline\n",
     "from typing import Optional\n",
-    "from _constants import HF_TOKEN, SAMPLE_DIR, MODEL_DIR\n",
+    "from _constants import HF_TOKEN, SAMPLE_DATA_DIR, MODEL_DIR\n",
     "from pyannote.audio.pipelines.utils.hook import ProgressHook\n",
-    "from nb_scripts import Utils"
+    "from notebooks_scripts import Utils"
    ]
   },
   {
@@ -130,7 +130,7 @@
     "        sample\n",
     "        for sample_dir in sample_dirs\n",
     "        for ext in sample_ext\n",
-    "        for sample in (SAMPLE_DIR / sample_dir).glob(f\"*{ext}\")\n",
+    "        for sample in (SAMPLE_DATA_DIR / sample_dir).glob(f\"*{ext}\")\n",
     "    ]\n",
     "\n",
     "    samples_dict = {}\n",
