--- a/notebooks/2r-extract-text.ipynb
+++ b/notebooks/2r-extract-text.ipynb
@@ -31,7 +31,7 @@
     "import justsdk\n",
     "import pymupdf\n",
     "\n",
-    "from _constants import SAMPLE_DIR"
+    "from _constants import SAMPLE_DATA_DIR"
    ]
   },
   {
@@ -49,7 +49,7 @@
    "source": [
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "TARGET_DIR = SAMPLE_DIR / \"text\"\n",
+    "TARGET_DIR = SAMPLE_DATA_DIR / \"text\"\n",
     "\n",
     "TARGET_SAMPLE = \"agile-method.pdf\""
    ]
