refactor!: Rename folder for helper scripts

--- a/notebooks/1r-transcribe-diarization.ipynb
+++ b/notebooks/1r-transcribe-diarization.ipynb
@@ -44,7 +44,7 @@
     "from typing import Optional\n",
     "from _constants import HF_TOKEN, SAMPLE_DATA_DIR, MODEL_DIR\n",
     "from pyannote.audio.pipelines.utils.hook import ProgressHook\n",
-    "from notebooks_scripts import Utils"
+    "from scripts import Utils"
    ]
   },
   {
