chore: Sync diarization params to notebook

--- a/notebooks/1r-transcribe-diarization.ipynb
+++ b/notebooks/1r-transcribe-diarization.ipynb
@@ -64,48 +64,38 @@
     "\n",
     "TARGET_SAMPLE = \"project-proposal.mp3\"\n",
     "\n",
-    "WHISPER_MODEL = \"base\"\n",
+    "WHISPER_MODEL_NAME = \"whisper-base-en\"\n",
     "\n",
-    "WHISPER_CONFIG = {\n",
-    "    \"model_size\": WHISPER_MODEL,\n",
-    "    \"device\": \"cpu\",\n",
+    "WHISPER_PARAMS = {\n",
+    "    \"model_size_or_path\": \"base.en\",\n",
     "    \"compute_type\": \"int8\",\n",
     "    \"num_workers\": 2,\n",
-    "    \"download_root\": str(MODEL_DIR / f\"whisper-{WHISPER_MODEL}\"),\n",
+    "    \"download_root\": str(MODEL_DIR / WHISPER_MODEL_NAME),\n",
+    "    \"local_files_only\": True,  # NOTE: Set to `False` if the local model is not available\n",
     "}\n",
     "\n",
     "AUDIO_CONFIG = {\n",
     "    \"language\": \"en\",\n",
-    "    \"task\": \"transcribe\",\n",
-    "    \"beam_size\": 5,  # Paths searches during decoding\n",
-    "    \"best_of\": 5,\n",
-    "    \"patience\": 1,\n",
-    "    \"length_penalty\": 1,\n",
-    "    \"temperature\": [0.0, 0.2, 0.4, 0.6, 0.8, 1.0],  # Temperature fallback\n",
-    "    \"compression_ratio_threshold\": 2.4,  # Reject if text is too repetitive\n",
-    "    \"log_prob_threshold\": -1.0,  # Threshold for confidence levels\n",
-    "    \"no_speech_threshold\": 0.6,  # Threshold for non-speech detection\n",
+    "    # \"compression_ratio_threshold\": 2.4,  # Reject if text is too repetitive\n",
+    "    # \"log_prob_threshold\": -1.0,  # Threshold for confidence levels\n",
+    "    # \"no_speech_threshold\": 0.6,  # Threshold for non-speech detection\n",
     "    \"word_timestamps\": True,  # Generate word-level timestamps\n",
     "    \"vad_filter\": True,  # Skip silent parts\n",
     "    \"vad_parameters\": {\n",
-    "        \"threshold\": 0.5,\n",
+    "        # \"threshold\": 0.5,\n",
     "        \"min_speech_duration_ms\": 250,\n",
-    "        \"max_speech_duration_s\": float(\"inf\"),\n",
-    "        \"min_silence_duration_ms\": 2000,\n",
-    "        \"speech_pad_ms\": 400,\n",
+    "        # \"max_speech_duration_s\": float(\"inf\"),\n",
+    "        # \"min_silence_duration_ms\": 2000,\n",
+    "        # \"speech_pad_ms\": 400,\n",
     "    },\n",
     "}\n",
     "\n",
     "DIARIZATION_CONFIG = {\n",
-    "    \"num_speakers\": None,\n",
-    "    \"min_speakers\": None,\n",
-    "    \"max_speakers\": None,\n",
-    "    \"segmentation_onset\": 0.5,  # XXX: Learn more about this threshold\n",
-    "    \"clustering\": {  # XXX: Learn more about clustering options\n",
+    "    \"clustering\": {\n",
     "        \"method\": \"centroid\",\n",
-    "        \"min_cluster_size\": 15,\n",
+    "        \"min_cluster_size\": 12,\n",
     "        \"threshold\": 0.7,\n",
-    "    },\n",
+    "    }\n",
     "}"
    ]
   },
@@ -164,13 +154,7 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    whisper_model = WhisperModel(\n",
-    "        model_size_or_path=WHISPER_CONFIG[\"model_size\"],\n",
-    "        device=WHISPER_CONFIG[\"device\"],\n",
-    "        compute_type=WHISPER_CONFIG[\"compute_type\"],\n",
-    "        num_workers=WHISPER_CONFIG[\"num_workers\"],\n",
-    "        download_root=WHISPER_CONFIG[\"download_root\"],\n",
-    "    )\n",
+    "    whisper_model = WhisperModel(**WHISPER_PARAMS)\n",
     "    justsdk.print_success(\"Loaded Whisper model.\")\n",
     "except Exception as e:\n",
     "    justsdk.print_error(f\"Failed to load Whisper model: {e}\")"
